# cloudy

./: .hlint.yaml  CHANGELOG.md  README.md  cloudy.cabal  default.nix  hie.yaml  shell.nix  stack-ghc-9.4.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
instance-setups/: hello-world-cloud-config.yaml  hello-world.yaml
nix/: default.nix  overlay.nix
src/: Cloudy.hs
src/Cloudy/: Cli.hs  Cmd.hs  Db.hs  InstanceSetup.hs  LocalConfFile.hs  NameGen.hs  Path.hs  Scaleway.hs  Table.hs
src/Cloudy/Cli/: Aws.hs  CreateAws.hs  CreateScaleway.hs  Scaleway.hs  Utils.hs
src/Cloudy/Cmd/: Aws.hs  CopyFile.hs  Create.hs  Destroy.hs  List.hs  Scaleway.hs  Ssh.hs  Utils.hs
src/Cloudy/Cmd/Create/: Scaleway.hs
src/Cloudy/Cmd/Scaleway/: Create.hs  ListImages.hs  ListInstanceTypes.hs  Utils.hs
src/Cloudy/InstanceSetup/: Types.hs
test/: Test.hs
test/Test/: Cloudy.hs
test/Test/Cloudy/: InstanceSetup.hs
